# bind9-api

./: .travis.yml  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  recipe.json
ci/: before_deploy.sh
client/: Cargo.toml
client/src/: cli.rs  main.rs
crypto/: Cargo.toml
crypto/src/: lib.rs
data/: Cargo.toml
data/src/: lib.rs
letsencrypt/: certbot-bind9-auth  certbot-bind9-cleanup
server/: Cargo.toml
server/src/: cli.rs  dns.rs  main.rs  util.rs
