[package]
name = "bind9-api-client"
version = "0.1.3"
authors = ["Valentin Brandl <vbrandl@riseup.net>"]
description = "Client for the BIND9 API"
license = "MIT/Apache-2.0"

[dependencies]
clap = "2.33.0"
crypto = { path = "../crypto" }
data = { path = "../data" }
failure = "0.1.1"
hyper = "0.12.30"
log = "0.4.6"
openssl-probe = "0.1.2"
pretty_env_logger = "0.3.0"
reqwest = "0.9.18"
serde = "1.0.92"
serde_derive = "1.0.92"
serde_json = "1.0.27"
toml = "0.5.1"
