[package]
name = "bind9-api"
version = "0.1.3"
authors = ["Valentin Brandl <vbrandl@riseup.net>"]
description = "Web API to create, update and remove DNS entries in bind9"
license = "MIT/Apache-2.0"

[dependencies]
actix-web = "1.0.2"
clap = "2.33.0"
crypto = { path = "../crypto" }
data = { path = "../data" }
failure = "0.1.5"
futures = "0.1.27"
log = "0.4.6"
pretty_env_logger = "0.3.0"
serde = "1.0.92"
serde_json = "1.0.39"
