[package]
name = "bind9-api"
version = "0.1.3"
authors = ["Valentin Brandl <vbrandl@riseup.net>"]
description = "Web API to create, update and remove DNS entries in bind9"
license = "MIT/Apache-2.0"

[dependencies]
actix-web = "0.7.19"
clap = "2.33.0"
crypto = { path = "../crypto" }
data = { path = "../data" }
failure = "0.1.6"
futures = "0.1.29"
log = "0.4.8"
pretty_env_logger = "0.3.1"
serde = "1.0.102"
serde_json = "1.0.41"
